--- a/filmliste/templates/filmliste/list_overview.html
+++ b/filmliste/templates/filmliste/list_overview.html
@@ -35,6 +35,7 @@
       defer
     ></script>
     <title>Document</title>
+    Version: 25-03-03
   </head>
   <body>
     {% comment %} {% if user.is_authenticated %} YOURE LOGGED IN {% else %} not
