--- a/site/filmliste/templates/filmliste/list_overview.html
+++ b/site/filmliste/templates/filmliste/list_overview.html
@@ -1,4 +1,4 @@
-{% load static %} {% load svg %} {% load title_card_colors %}
+{% load static %} {% load svg %} {% load title_card_colors %} {% load hosts %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -99,7 +99,7 @@
           </div>
           </div>
           {% else %}
-          <a href="{% url 'login' host 'filmliste' %}" class="login">
+          <a href="{% host_url 'login' host 'filmliste' %}" class="login">
             Log in
           </a>
           {% endif %}
