--- a/site/filmliste/templates/filmliste/login.html
+++ b/site/filmliste/templates/filmliste/login.html
@@ -32,7 +32,7 @@
         </div>
         <div class="inner">
           <div class="login">
-            <form action="{% url 'filmliste:login' %}" method="post">
+            <form action="{% url 'login' host 'filmliste' %}" method="post">
               {% csrf_token %}
               {{ login.type }}
               <div class="field">
@@ -49,7 +49,7 @@
             </form>
           </div>
           <div class="register hidden">
-            <form action="{% url 'filmliste:login' %}" method="post">
+            <form action="{% url 'login' host 'filmliste' %}" method="post">
               {% csrf_token %}
               {{ signup.type }}
               <div class="field">
